completed comparison page

--- a/web_visualizations/max_temp.html
+++ b/web_visualizations/max_temp.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Latitude Wind Speed Analysis </title>
+    <title> Latitude Temperature Analysis </title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../style.css">
@@ -57,9 +57,9 @@
         <div class="row">
             <div class="col-sm-12 col-md-8">
                 <div class="box">
-                    <h1 class="title"> Wind Speed </h1>
+                    <h1 class="title"> Max Temperature </h1>
                     <hr>
-                        <img src="../images/wind_speed.png" alt="Lat vs. Wind Speed" class="chart_visual">
+                        <img src="../images/max_temperature.png" alt="Lat vs. Max Temperature" class="chart_visual">
                         <p> This is where text goes</p>
                 </div>
             </div>
