--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="web_visualizations/cloudiness.html">Cloudiness</a>
                         <a class="dropdown-item" href="web_visualizations/humidity.html">Humidity</a>
-                        <a class="dropdown-item" href="web_visualizations/max_temp.html.html">Max Temperature</a>
+                        <a class="dropdown-item" href="web_visualizations/max_temp.html">Max Temperature</a>
                         <a class="dropdown-item" href="web_visualizations/wind_speed.html">Wind Speed</a>
                     </div>
                 </li>
@@ -67,24 +67,21 @@
 
             <!-- Visualisations -->
             <div class="col-sm-12 col-md-4">
-                <div class="box">
+                <div class="box1">
                     <h1 class="title"> Visualizations </h1>
-                    <hr>
-
-                    <a href="web_visualizations/max_temp.html.html">
-                        <img class="float-left thumbnail" src="images/max_temperature.png" alt="Latitude vs. Max Temp">
-                    </a>
-                    <a href="web_visualizations/humidity.html">
-                        <img class="float-right thumbnail" src="images/humidity.png" alt="Latitude vs. Humidity">
-                    </a>
-                    <a href="web_visualizations/cloudiness.html">
-                        <img class="float-left thumbnail" src="images/cloudiness.png" alt="Latitude vs. Cloudiness">
-                    </a>
-                    <a href="web_visualizations/wind_speed.html">
-                        <img class="float-right thumbnail" src="images/wind_speed.png" alt="Latitude vs Wind Speed">
-                    </a>
-                </div>
-                
+                        <hr>
+                        <a href="web_visualizations/max_temp.html">
+                            <img class="float-left thumbnail" src="images/max_temperature.png" alt="Latitude vs. Max Temp">
+                        </a>
+                        <a href="web_visualizations/humidity.html">
+                            <img class="float-right thumbnail" src="images/humidity.png" alt="Latitude vs. Humidity">
+                        </a>
+                        <a href="web_visualizations/cloudiness.html">
+                            <img class="float-left thumbnail" src="images/cloudiness.png" alt="Latitude vs. Cloudiness">
+                        </a>
+                        <a href="web_visualizations/wind_speed.html">
+                            <img class="float-right thumbnail" src="images/wind_speed.png" alt="Latitude vs Wind Speed">
+                        </a>
                 </div>
             </div>
         </div>
