finalise css and add info for charts

--- a/web_visualizations/max_temp.html
+++ b/web_visualizations/max_temp.html
@@ -13,7 +13,7 @@
 
 <!-- nav bar -->
     <div class="navigation">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="../index.html">Latitude</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -36,10 +36,8 @@
                     <a class="nav-link" href="comparison.html"> Comparison </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="cities_data.html"> Data </a>
+                    <a class="nav-link" href="../resources/cities_df.html"> Data </a>
                 </li>
-                
-                
                 </li>
             </ul>
             </div>
@@ -60,7 +58,7 @@
                     <h1 class="title"> Max Temperature </h1>
                     <hr>
                         <img src="../images/max_temperature.png" alt="Lat vs. Max Temperature" class="chart_visual">
-                        <p> This is where text goes</p>
+                        <p> This chart shows that the temperature gets warmer the closer it is to the equator. </p>
                 </div>
             </div>
 
